Add logo images

--- a/src/index.html
+++ b/src/index.html
@@ -33,15 +33,29 @@
     <div class="projects">
       <h2>Projects</h2>
       <ul class="project-links">
-        <li><a:{color: antiquewhite} href="https://github.com/KeishaMarie/HairSalon">Client Tracker</a></li>
+        <li><a href="https://github.com/KeishaMarie/HairSalon">Client Tracker</a></li>
         <li><a:{color: antiquewhite} href="https://github.com/KeishaMarie/virtual-tamagotchi">Virtual TOM-agotchi</a></li>
         <li><a:{color: antiquewhite} href="https://github.com/KeishaMarie/mr_robogers">Mr.Robogers</a></li>
       </ul>
 
     </div>
-
 <!---------------------------Skills---------------------------------------->
-
+<div class="grid-container">
+  <div><img src="./images/c#-logo.png" alt="c sharp logo"></div>
+  <div><img src="./images/css-logo.png" alt="css logo"></div>
+  <div><img src="./images/firebase-logo.png" alt="css logo"></div>
+  <div><img src="./images/javascript-logo.jpg" alt="css logo"></div>
+  <div><img src="./images/mysql-logo.jpg" alt="css logo"></div>
+  <div><img src="./images/nodejs-logo.jpg" alt="css logo"></div>
+  <div><img src="./images/react-logo.png" alt="css logo"></div>
+  <div>here is a logo</div>
+  <!-- <div>here is another logo</div>
+  <div>here is another logo</div>
+  <div>here is another logo</div>
+  <div>here is another logo</div>
+  <div>here is another logo</div>
+  <div>here is another logo</div> -->
+</div>
 
 <!---------------------------Education------------------------------------->
 
