--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html Lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
       rel="stylesheet"
@@ -15,30 +12,37 @@
 <!---------------------------Navigation------------------------------->
     <div class="cursor"></div>
     <nav>
-      <!-- <h1>Keisha Marie</h1> -->
       <ul class="nav-links">
-        <li><a:{color: antiquewhite} href="https://github.com/KeishaMarie">Github</a></li>
-        <li><a:{color: antiquewhite} href="https://www.linkedin.com/in/keishahepner/">LinkedIn</li>
-        <li>Contact</li>
+        <li><a href="https://github.com/KeishaMarie">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/keishahepner/">LinkedIn</li>
+        <li><a href="https://phonylink.com/">Contact</a></li>
       </ul>
     </nav>
+<!------------------------Video------------------------------------------------>
+
+    <div class="banner">
+      <video autoplay muted loop>
+        <source src="./video/MOVIE.mp4"
+      </video>
+    </div>
+
 <!---------------------------Bio------------------------------------------->
+
     <div class="bio">
-      <img src="./images/portfolio-pic-edit.jpeg" alt="Picture of Keisha">
+      <img class="clip" src="./images/portfolio-pic-edit.jpeg" alt="Picture of Keisha">
       <br>
       <br>
         <div class="bio-text">Some really cool information about myself." Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</div>
-      </div>
-
+    </div>
 
 <!---------------------------Projects-------------------------------------->
     <div class="projects">
       <h2>Projects</h2>
         <ul class="nav-links">
           <div class="grid-container-projects">
-            <li><a:{color: antiquewhite} href="https://github.com/KeishaMarie/HairSalon">Client Tracker</a></li>
-            <li><a:{color: antiquewhite} href="https://github.com/KeishaMarie/virtual-tamagotchi">Virtual TOM-agotchi</a></li>
-            <li><a:{color: antiquewhite} href="https://github.com/KeishaMarie/mr_robogers">Mr.Robogers</a></li>
+            <li><a href="https://github.com/KeishaMarie/HairSalon">Client Tracker</a></li>
+            <li><a href="https://github.com/KeishaMarie/virtual-tamagotchi">Virtual TOM-agotchi</a></li>
+            <li><a href="https://github.com/KeishaMarie/mr_robogers">Mr.Robogers</a></li>
             <p>This application allows a salon to add stylists with details including: name, specialty and hours. It allows a salon to add clients to stylists with the details: name, phone number, appointment date, and service needed. It suports edit and delete functionality of both stylists and clients.</p>
             <p>Virtual Tomogotchi game that generates a random Tom with health, happiness, fitness, hunger, and brain power stats. However, if your virtual Tom is not taken care of then his stats will drop to 0-- leading to game over. Player must use the happiness, fitness, hunger, and brain power buttons to keep their Tom alive.</p>
             <p>This web application will give you a message replacing certain elements of your message with Mr. Roboger's message based on the number you input.</p>
