WIP styling video

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,12 @@
     </nav>
 <!------------------------Video------------------------------------------------>
 
-    <div class="banner">
-      <video autoplay muted loop>
-        <source src="./video/MOVIE.mp4"
-      </video>
-    </div>
+      <div class="video-box" id="video-box-container">
+        <video autoplay muted loop>
+          <source src="video/MOVIE (1).mp4" type="video/mp4">
+        </video>
+        <h2>Keisha</h2>
+      </div>
 
 <!---------------------------Bio------------------------------------------->
 
@@ -38,6 +39,7 @@
 <!---------------------------Projects-------------------------------------->
     <div class="projects">
       <h2>Projects</h2>
+      <br>
         <ul class="nav-links">
           <div class="grid-container-projects">
             <li><a href="https://github.com/KeishaMarie/HairSalon">Client Tracker</a></li>
@@ -46,8 +48,8 @@
             <p>This application allows a salon to add stylists with details including: name, specialty and hours. It allows a salon to add clients to stylists with the details: name, phone number, appointment date, and service needed. It suports edit and delete functionality of both stylists and clients.</p>
             <p>Virtual Tomogotchi game that generates a random Tom with health, happiness, fitness, hunger, and brain power stats. However, if your virtual Tom is not taken care of then his stats will drop to 0-- leading to game over. Player must use the happiness, fitness, hunger, and brain power buttons to keep their Tom alive.</p>
             <p>This web application will give you a message replacing certain elements of your message with Mr. Roboger's message based on the number you input.</p>
-          </ul>
-        </div>
+          </div>
+        </ul>
     </div>
 <br>
 <br>
