WIP style logo grid

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html Lang="en">
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
-      rel="stylesheet"
-      />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
-
   <body>
 <!---------------------------Navigation------------------------------->
     <div class="cursor"></div>
@@ -20,12 +16,12 @@
     </nav>
 <!------------------------Video------------------------------------------------>
 
-      <div class="video-box" id="video-box-container">
+      <!-- <div class="video-box" id="video-box-container">
         <video autoplay muted loop>
           <source src="video/MOVIE (1).mp4" type="video/mp4">
         </video>
         <h2>Keisha</h2>
-      </div>
+      </div> -->
 
 <!---------------------------Bio------------------------------------------->
 
@@ -55,16 +51,18 @@
 <br>
 <br>
 <!---------------------------Skills---------------------------------------->
-<div class="grid-container-logo">
-  <div><img id="csharp" src="https://github.com/KeishaMarie/FinalCapstone-VJS/blob/main/src/images/c%23-logo.png?raw=true" alt="c sharp logo"></div>
-  <div><img id="css" src="./images/css-logo.png" alt="css logo"></div>
-  <div><img id="firebase" src="./images/firebase-logo.png" alt="css logo"></div>
-  <div><img id="javascript" src="./images/javascript-logo.jpg" alt="css logo"></div>
-  <div><img id="mysql" src="./images/mysql-logo.jpg" alt="css logo"></div>
-  <div><img id="nodejs" src="./images/nodejs-logo.jpg" alt="css logo"></div>
-  <div><img id="react" src="./images/react-logo.png" alt="css logo"></div>
-</div>
 
+    <section class="skills">
+      <div class="grid-container-logo flex">
+        <div class="card"><img id="csharp" src="./images/csharp-logo.png" alt="c sharp logo"></div>
+        <div class="card"><img id="css" src="./images/css-logo.webp" alt="css logo"></div>
+        <div class="card"><img id="firebase" src="./images/firebase-logo.png" alt="css logo"></div>
+        <div class="card"><img id="javascript" src="./images/javascript-logo.jpg" alt="css logo"></div>
+        <div class="card"><img id="mysql" src="./images/mysql-logo.jpg" alt="css logo"></div>
+        <div class="card"><img id="nodejs" src="./images/nodejs-logo.jpg" alt="css logo"></div>
+        <div class="card"><img id="react" src="./images/react-logo.png" alt="css logo"></div>
+      </div>
+    </section>
 <!---------------------------Education------------------------------------->
 
 
