--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,8 @@
 
     <section class="skills">
       <div class="grid-container-logo flex">
-        <div class="card"><img id="csharp" src="./images/csharp-logo.png" alt="c sharp logo"></div>
-        <div class="card"><img id="css" src="./images/css-logo.webp" alt="css logo"></div>
+        <!-- <div class="card"><img id="csharp" src="./images/csharp-logo.png" alt="c sharp logo"></div> -->
+        <!-- <div class="card"><img id="css" src="./images/css-logo.webp" alt="css logo"></div> -->
         <div class="card"><img id="firebase" src="./images/firebase-logo.png" alt="css logo"></div>
         <div class="card"><img id="javascript" src="./images/javascript-logo.jpg" alt="css logo"></div>
         <div class="card"><img id="mysql" src="./images/mysql-logo.jpg" alt="css logo"></div>
