Corrected positioning. Styled font

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,22 @@
         <h2>Keisha</h2>
       </div> -->
 
+<!-------------------------Name--------------------------------------------------->
+
+    <section>
+      <div class="grid-container-video">
+        <video src="./video/smoke.mp4" autoplay muted></video>
+          <h1>
+            <span>k</span>
+            <span>e</span>
+            <span>i</span>
+            <span>s</span>
+            <span>h</span>
+            <span>a</span>
+          </h1>
+      </div>
+    </section>
+
 <!---------------------------Bio------------------------------------------->
 
     <div class="bio">
@@ -34,7 +50,7 @@
 
 <!---------------------------Projects-------------------------------------->
     <div class="projects">
-      <h2>Projects</h2>
+      <h1 data-text="Projects">Projects</h1>
       <br>
         <ul class="nav-links">
           <div class="grid-container-projects">
@@ -53,15 +69,16 @@
 <!---------------------------Skills---------------------------------------->
 
     <section class="skills">
-      <div class="grid-container-logo flex">
-        <!-- <div class="card"><img id="csharp" src="./images/csharp-logo.png" alt="c sharp logo"></div> -->
-        <!-- <div class="card"><img id="css" src="./images/css-logo.webp" alt="css logo"></div> -->
-        <div class="card"><img id="firebase" src="./images/firebase-logo.png" alt="css logo"></div>
-        <div class="card"><img id="javascript" src="./images/javascript-logo.jpg" alt="css logo"></div>
-        <div class="card"><img id="mysql" src="./images/mysql-logo.jpg" alt="css logo"></div>
-        <div class="card"><img id="nodejs" src="./images/nodejs-logo.jpg" alt="css logo"></div>
-        <div class="card"><img id="react" src="./images/react-logo.png" alt="css logo"></div>
-      </div>
+      <h1>Skill Set</h1>
+        <div class="grid-container-logo flex">
+          <div class="card"><img id="csharp" src="https://github.com/KeishaMarie/FinalCapstone-VJS/blob/main/src/images/csharp-logo.png?raw=true" alt="c sharp logo"></div>
+          <div class="card"><img id="css" src="./images/css-logo.png" alt="css logo"></div>
+          <div class="card"><img id="firebase" src="./images/firebase-logo.png" alt="firebase logo"></div>
+          <div class="card"><img id="javascript" src="./images/javascript-logo.png" alt="javascript logo"></div>
+          <div class="card"><img id="mysql" src="./images/mysql-logo.png" alt="mysql" logo"></div>
+          <div class="card"><img id="nodejs" src="./images/nodejs-logo.png" alt="node js logo"></div>
+          <div class="card"><img id="react" src="./images/react-logo.png" alt="react logo"></div>
+        </div>
     </section>
 <!---------------------------Education------------------------------------->
 
