Add Scroll animation

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     </div>
 
 <!---------------------------Projects-------------------------------------->
-    <div class="projects">
+    <div class="projects hidden">
       <h1 data-text="Projects">Projects</h1>
       <br>
         <ul class="nav-links">
@@ -68,7 +68,7 @@
 <br>
 <!---------------------------Skills---------------------------------------->
 
-    <section class="skills">
+    <section class="skills hidden">
       <h1>Skill Set</h1>
         <div class="grid-container-logo flex">
           <div class="card"><img id="csharp" src="https://github.com/KeishaMarie/FinalCapstone-VJS/blob/main/src/images/csharp-logo.png?raw=true" alt="c sharp logo"></div>
